[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://main/ui/theme/main.theme" type="Theme" id=2]
[ext_resource path="res://main/ui/ui_screen/level_select/level_info_container/level_info_container.gd" type="Script" id=3]
[ext_resource path="res://main/ui/theme/ButtonSounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/ui/theme/sound_button.gd" type="Script" id=5]
[ext_resource path="res://main/ui/ui_screen/level_select/level_info_container/icons/icon1.png" type="Texture" id=6]
[ext_resource path="res://main/ui/ui_screen/level_select/level_info_container/icons/icon2.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.027451, 0.0313726, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[node name="LevelInfoContainer" type="PanelContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_right = 56.0
margin_bottom = 114.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
offset = Vector2( -32, -84 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 112.0
margin_bottom = 114.0
custom_constants/separation = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 9.0
text = "City 1 - 1"
align = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_left = 24.0
margin_top = 12.0
margin_right = 88.0
margin_bottom = 76.0
size_flags_horizontal = 6
size_flags_vertical = 0
texture = ExtResource( 1 )

[node name="StatContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 112.0
margin_bottom = 114.0

[node name="HBoxContainer" type="HBoxContainer" parent="StatContainer"]
margin_right = 112.0
margin_bottom = 13.0

[node name="TextureRect" type="TextureRect" parent="StatContainer/HBoxContainer"]
margin_right = 13.0
margin_bottom = 13.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="StatContainer/HBoxContainer"]
margin_left = 17.0
margin_top = 2.0
margin_right = 49.0
margin_bottom = 11.0
text = "12:32"

[node name="HBoxContainer2" type="HBoxContainer" parent="StatContainer"]
margin_top = 17.0
margin_right = 112.0
margin_bottom = 30.0

[node name="TextureRect" type="TextureRect" parent="StatContainer/HBoxContainer2"]
margin_right = 13.0
margin_bottom = 13.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="StatContainer/HBoxContainer2"]
margin_left = 17.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 11.0
text = "000/200"

[node name="HBoxContainer3" type="HBoxContainer" parent="StatContainer"]
margin_top = 34.0
margin_right = 112.0
margin_bottom = 47.0

[node name="TextureRect" type="TextureRect" parent="StatContainer/HBoxContainer3"]
margin_right = 13.0
margin_bottom = 13.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="StatContainer/HBoxContainer3"]
margin_left = 17.0
margin_top = 2.0
margin_right = 71.0
margin_bottom = 11.0
text = "000000"

[node name="Button" type="Button" parent="."]
margin_top = 82.0
margin_right = 112.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 0
size_flags_vertical = 8
enabled_focus_mode = 0
text = "Go"
script = ExtResource( 5 )

[node name="ButtonSounds" parent="Button" instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
